--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
-    "aws-cdk": "^2.178.2",
+    "aws-cdk": "^2.1001.0",
     "aws-cdk-lib": "^2.180.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
@@ -22,6 +22,10 @@
   },
   "dependencies": {
     "@types/aws-lambda": "^8.10.147",
-    "constructs": "^10.0.0"
+    "@types/aws-sdk": "^0.0.42",
+    "@types/uuid": "^10.0.0",
+    "aws-sdk": "^2.1692.0",
+    "constructs": "^10.0.0",
+    "uuid": "^11.1.0"
   }
 }
