--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "typescript": "~5.6.3"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.758.0",
+    "@aws-sdk/lib-dynamodb": "^3.758.0",
     "@types/aws-lambda": "^8.10.147",
     "@types/aws-sdk": "^0.0.42",
     "@types/uuid": "^10.0.0",
